fix the overflow in the users detail page

--- a/src/Components/detail.scss
+++ b/src/Components/detail.scss
@@ -73,6 +73,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      width: 100%;
     }
   }
   .body-wrapper {
